--- a/.github/workflows/db_test.yml
+++ b/.github/workflows/db_test.yml
@@ -32,5 +32,6 @@ jobs:
         emoji: true
         verbose: true
         job-summary: true
+        click-to-expand: false
         report-title: "Database Integrity Test"
         custom-arguments: "test_database/"
