--- a/.github/workflows/db_test.yml
+++ b/.github/workflows/db_test.yml
@@ -14,24 +14,33 @@ jobs:
         python-version: ["3.10"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+    - uses: dorny/paths-filter@v2
+      id: changes
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get -y install libegl1-mesa
-        python -m pip install --upgrade pip
-        pip install .[dev]
-        pip install coveralls
-        pip install pytest pytest-md pytest-emoji
-    - uses: pavelzw/pytest-action@v2
-      with:
-        emoji: true
-        verbose: true
-        job-summary: true
-        click-to-expand: false
-        report-title: "Database Integrity Test"
-        custom-arguments: "test_database/"
+        filters: |
+          database:
+            - 'database/**'
+      # run only if database was changed
+    - if: steps.changes.outputs.database == 'true'
+      run:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install libegl1-mesa
+          python -m pip install --upgrade pip
+          pip install .[dev]
+          pip install coveralls
+          pip install pytest pytest-md pytest-emoji
+      - uses: pavelzw/pytest-action@v2
+        with:
+          emoji: true
+          verbose: true
+          job-summary: true
+          click-to-expand: false
+          report-title: "Database Integrity Test"
+          custom-arguments: "test_database/"
