--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 0.0.0
+current_version = 0.0.1
 commit = True
 tag = False
 
-[bumpversion:file:stardustlib/__init__.py]
+[bumpversion:file:pgdtools/__init__.py]
