Update everything to db/paper status 2023-07-22

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ requires = [
     "iniabu>=1.0.1",
     "matplotlib",
     "pandas",
-    "numpy"
+    "numpy",
+    "scipy"
 ]
 description-file = "README.md"
 
