Add first maintainer tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,9 @@ dev = [
     "requests"
 ]
 
-db_maintainer = [
-    "bibtexparser"
+maintainer = [
+    "bibtexparser",
+    "openpyxl"
 ]
 
 docs = [
