--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ requires = [
     "pandas",
     "numpy",
     "scipy",
-    "setuptools-scm"
 ]
 description-file = "README.md"
 
@@ -46,6 +45,9 @@ docs = [
     "sphinx_rtd_theme",
     "sphinxcontrib-mermaid"
 ]
+
+[tool.flit.sdist]
+exclude = [".gitignore", ".coverage", ".readthedocs.yaml"]
 
 [tool.setuptools_scm]
 write_to = "pgdtools/_version.py"
