--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,60 +1,62 @@
-[build-system]
-requires = ["flit_scm"]
-build-backend = "flit_scm:buildapi"
-
 [project]
 name = "pgdtools"
+version = "0.0.1"
+description = "Add your description here"
 authors = [
-    {name="Reto Trappitsch", email="reto@galactic-forensics.space"}
+    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
 ]
 dependencies = [
     "iniabu>=1.1.2",
-    "matplotlib",
-    "pandas",
-    "numpy",
-    "requests",
-    "scipy",
+    "matplotlib>=3.7.4",
+    "numpy>=1.26.4",
+    "scipy>=1.12.0",
+    "pandas>=2.2.0",
+    "requests>=2.31.0",
 ]
 readme = "README.md"
-requires-python=">=3.8,<3.12"
-classifiers = ["License :: OSI Approved :: MIT License"]
-dynamic = ["version", "description"]
+requires-python = ">= 3.9"
+license = { text = "MIT" }
 
 [project.urls]
 Source = "https://github.com/galactic-forensics/pgdtools"
 Documentation = "https://pgdtools.readthedocs.io"
 
 [project.optional-dependencies]
-dev = [
-    "darglint>=1.5.1",
-    "flake8>=4,<5",
-    "flake8-bandit",
-    "flake8-black",
-    "flake8-bugbear",
-    "flake8-docstrings",
-    "flake8-import-order",
-    "bandit==1.7.2",
-    "hypothesis",
-    "pytest>=6.0.0",
-    "pytest-cov",
-    "pytest-mock",
-    "pytest-sugar",
-    "requests-mock"
-]
-
 maintainer = [
-    "bibtexparser",
-    "openpyxl"
+    "bibtexparser>=1.4.1",
+    "openpyxl>=3.1.2",
 ]
-
 docs = [
-    "sphinx",
-    "sphinx_rtd_theme",
-    "sphinxcontrib-mermaid"
+    "sphinx>=7.1.2",
+    "sphinx_rtd_theme>=2.0.0",
+    "sphinxcontrib-mermaid>=0.9.2",
 ]
 
-[tool.flit.sdist]
-exclude = [".gitignore", ".coverage", ".readthedocs.yaml"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
-write_to = "pgdtools/_version.py"
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "ruff>=0.2.1",
+    "hypothesis>=6.98.2",
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "requests-mock>=1.11.0",
+]
+
+[tool.rye.scripts]
+test = "pytest"
+test_cov = "pytest --cov=pgdtools --cov-report xml"
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/pgdtools"]
+
+[tool.pytest]
+testpaths = "tests"
+addopts = "--cov=pgdtools -v"
