clean up init and change metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pgdtools"
 version = "0.0.1"
-description = "Add your description here"
+description = "Read and interact with the presolar grain database with python."
 authors = [
     { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
 ]
