--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,8 @@ maintainer = [
     "openpyxl>=3.1.2",
 ]
 docs = [
-    "sphinx>=7.1.2",
-    "sphinx_rtd_theme>=2.0.0",
-    "sphinxcontrib-mermaid>=0.9.2",
+    "mkdocs>=1.6.0",
+    "mkdocs-material>=9.5.25",
 ]
 
 [build-system]
@@ -47,8 +46,6 @@ dev-dependencies = [
 ]
 
 [tool.rye.scripts]
-test = "pytest"
-test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
 allow-direct-references = true
