--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dev-dependencies = [
 ]
 
 [tool.rye.scripts]
+test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
 allow-direct-references = true
