--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,8 @@ maintainer = [
     "openpyxl>=3.1.2",
 ]
 docs = [
-    "sphinx>=7.1.2",
-    "sphinx_rtd_theme>=2.0.0",
-    "sphinxcontrib-mermaid>=0.9.2",
+    "mkdocs>=1.6.0",
+    "mkdocs-material>=9.5.25",
 ]
 
 [build-system]
@@ -39,7 +38,6 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
-    "ruff>=0.2.1",
     "hypothesis>=6.98.2",
     "pytest>=8.0.0",
     "pytest-cov>=4.1.0",
@@ -48,7 +46,6 @@ dev-dependencies = [
 ]
 
 [tool.rye.scripts]
-test = "pytest"
 test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
