--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,9 @@ jobs:
         rye pin ${{ matrix.python-version }}
         rye sync --all-features
     - name: Run Tests for python interface
-      run: rye test
+      run: |
+        rye test
+        rye run test_docs
     - name: Run Lint on one python
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
       run: rye lint
