--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,9 +43,11 @@ dev-dependencies = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "requests-mock>=1.11.0",
+    "xdoctest>=1.1.5",
 ]
 
 [tool.rye.scripts]
+test_docs = "xdoctest pgdtools"
 test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
