--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ maintainer = [
 docs = [
     "mkdocs>=1.6.0",
     "mkdocs-material>=9.5.25",
+    "mkdocs-jupyter>=0.24.8",
+    "notebook>=7.2.1",
 ]
 
 [build-system]
