--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ docs = [
     "mkdocs-jupyter>=0.24.8",
     "notebook>=7.2.1",
     "ceresfit>=0.3.1",
+    "mkdocstrings[python]>=0.25.1",
 ]
 
 [build-system]
