--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,10 +38,23 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.arithmatex:
+      generic: true
 
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
   - search
+  - mkdocs-jupyter
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            docstring_style: sphinx
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
 
 
 nav:
@@ -49,6 +62,19 @@ nav:
   - User guide:
       - Installation: users/install.md
       - Database management: users/db.md
+      - Classify: users/classify.md
+      - Presolar Grains: users/pgd.md
+      - Examples:
+          - SiC M GCE plot: examples/sic_m_gce.ipynb
+          - Mo isotopes: examples/sic_mo_stephan.ipynb
   - Maintainer guide:
       - Overview: maintainer/overview.md
       - Add new database: maintainer/db_addition.md
+  - API:
+      - Classify: api/classify.md
+      - PGDTools: api/pgdtools.md
+      - PGD subtools: api/subtools.md
+      - Database: api/db.md
+      - Maintainer: api/maintainer.md
+  - About:
+      - Code of Conduct: code_of_conduct.md
