--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pgdtools"
-version = "0.0.1"
+version = "0.1.0"
 description = "Read and interact with the presolar grain database with python."
 authors = [
     { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
@@ -29,6 +29,10 @@ maintainer = [
 docs = [
     "mkdocs>=1.6.0",
     "mkdocs-material>=9.5.25",
+    "mkdocs-jupyter>=0.24.8",
+    "notebook>=7.2.1",
+    "ceresfit>=0.3.1",
+    "mkdocstrings[python]>=0.25.1",
 ]
 
 [build-system]
@@ -43,9 +47,11 @@ dev-dependencies = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "requests-mock>=1.11.0",
+    "xdoctest>=1.1.5",
 ]
 
 [tool.rye.scripts]
+test_docs = "xdoctest pgdtools"
 test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
