update workflows, add justfile for updating python versions

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -24,4 +24,4 @@ jobs:
         PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
       run: |
         rye build
-        rye publish --toke $PYPI_TOKEN --yes
+        rye publish --token $PYPI_TOKEN --yes
