--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: tests
 
 on:
@@ -10,7 +7,7 @@ on:
     branches: [ main ]
 
 env:
-  MAIN_PYTHON_VERSION: "3.12"
+  MAIN_PYTHON_VERSION: "3.13"
 
 jobs:
   # Build and test
@@ -18,27 +15,29 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-
+        python-version:
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
     steps:
     - uses: actions/checkout@v4
-    - name: Install the latest version of rye
-      uses: eifinger/setup-rye@v4
-    - name: Sync Rye
-      run: |
-        rye pin ${{ matrix.python-version }}
-        rye sync --all-features
-    - name: Run Tests for python interface
-      run: |
-        rye test
-        rye run test_docs
+    - name: Install uv and set the python version
+      uses: astral-sh/setup-uv@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install the project
+      run: uv sync --all-extras --dev
+    - name: Run tests
+      run: uv run pytest
     - name: Run Lint on one python
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
-      run: rye lint
+      run: uv run ruff check
     - name: Run Pytest with coverage
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION }}
       run: |
-        rye run test_cov
+        uv run pytest --cov=pgdtools --cov-report xml
     - name: Upload coverage reports to Codecov
       if: ${{ matrix.python-version == env.MAIN_PYTHON_VERSION && github.repository_owner == 'NASA-Planetary-Science' }}
       uses: codecov/codecov-action@v3
