--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,4 +16,7 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-  - requirements: uv.lock
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
