--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,7 +8,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: "3.13"
 
 mkdocs:
   configuration: mkdocs.yml
@@ -16,4 +16,7 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
   install:
-  - requirements: requirements.lock
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
