--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ docs = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = [
     "hypothesis>=6.98.2",
@@ -47,12 +47,9 @@ dev-dependencies = [
     "pytest-cov>=4.1.0",
     "pytest-mock>=3.12.0",
     "requests-mock>=1.11.0",
+    "ruff>=0.11.2",
     "xdoctest>=1.1.5",
 ]
-
-[tool.rye.scripts]
-test_docs = "xdoctest pgdtools"
-test_cov = "pytest --cov=pgdtools --cov-report xml"
 
 [tool.hatch.metadata]
 allow-direct-references = true
